feat: setup production cdk infrastructure and github actions pipeline